# tireSalesAgent

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .htmlhintrc  .ruff.toml  .shellcheckrc  CLAUDE.md  CONTEXT.md  Dockerfile  Dockerfile.frontend  Edge_scenarios.txt  README.md  agent.py  app.py  constants.py  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  inventory.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  setup_service.sh  start.sh  tire-agent-web.service  tire-agent.service  tools.py
.github/workflows/: deploy-container.yml  main.yml  quality.yml  salesAgent-deploy.yml
deploy/: configure-ngrok.sh  install-services.sh
public/: app.js  chat.html  dashboard.css  dashboard.js  index.html  logs.html  logs.js  style.css
static/: app.js  dashboard.css  dashboard.js  style.css
templates/: index.html
