[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tire-sales-agent"
version = "1.0.0"
description = "Agente de ventas de neum ticos para Neum ticos Martinez"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["requests.*", "flask.*", "flask_limiter.*", "google.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"