[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tire-sales-agent"
version = "1.0.0"
description = "Agente de ventas de neum ticos para Neum ticos Martinez"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["requests.*", "flask.*", "flask_limiter.*", "google.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"